--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "OhLife",
-  "version": "0.0.0",
+  "name": "WhoaLife",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -11,6 +11,9 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "express-jwt": "^0.3.2",
+    "jsonwebtoken": "^1.1.2",
+    "monk": "^0.9.0",
     "morgan": "~1.3.0"
   }
 }
