--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^1.1.2",
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
-    "sendgrid": "^1.2.0"
+    "sendgrid": "^1.2.0",
+    "underscore": "^1.7.0"
   }
 }
