--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.9.0",
     "express-jwt": "^0.3.2",
     "jsonwebtoken": "^1.1.2",
+    "moment": "^2.8.3",
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
     "sendgrid": "^1.2.0",
