--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express-jwt": "^0.3.2",
     "jsonwebtoken": "^1.1.2",
     "moment": "^2.8.3",
+    "moment-timezone": "^0.2.2",
     "monk": "^0.9.0",
     "morgan": "~1.3.0",
+    "request": "^2.44.0",
     "sendgrid": "^1.2.0",
     "underscore": "^1.7.0"
   }
