--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.8.1",
     "connect-busboy": "0.0.1",
     "debug": "~2.0.0",
