--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "env $(heroku config -s) nodemon bin/www",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "async": "^0.9.0",
-    "body-parser": "~1.8.1",
+    "body-parser": "^1.9.0",
+    "bower": "^1.3.11",
     "connect-busboy": "0.0.1",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-jwt": "^0.3.2",
+    "hjs": "0.0.6",
     "jsonwebtoken": "^1.1.2",
     "moment": "^2.8.3",
     "moment-timezone": "^0.2.2",
@@ -19,5 +22,8 @@
     "morgan": "~1.3.0",
     "sendgrid": "^1.2.0",
     "underscore": "^1.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.1"
   }
 }
