--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "normalize-css": "~3.0.1",
+    "backbone": "~1.1.2"
   }
 }
