--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "basic-auth": "^1.0.0",
     "body-parser": "^1.9.0",
     "bower": "^1.3.11",
     "connect-busboy": "0.0.1",
     "debug": "~2.0.0",
     "express": "~4.9.0",
-    "express-jwt": "^0.3.2",
     "hjs": "0.0.6",
     "jsonwebtoken": "^1.1.2",
     "moment": "^2.8.3",
