--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.9.0",
     "bower": "^1.3.11",
     "connect-busboy": "0.0.1",
+    "countdown": "^2.3.0",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "hjs": "0.0.6",
