--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "env $(heroku config -s) nodemon bin/www",
-    "postinstall": "bower install"
+    "start": "heroku local --procfile Procfile.dev",
+    "postinstall": "bower install",
+    "www": "nodemon bin/www"
   },
   "engines": {
     "node": "8.9.4"
@@ -12,21 +13,22 @@
   "dependencies": {
     "async": "^0.9.0",
     "basic-auth": "^1.0.0",
-    "body-parser": "^1.9.0",
+    "body-parser": "^1.19.0",
     "bower": "^1.3.11",
     "connect-busboy": "0.0.1",
     "countdown": "^2.3.0",
     "debug": "~2.0.0",
-    "express": "~4.9.0",
+    "express": "^4.17.1",
     "hjs": "0.0.6",
     "jsonwebtoken": "^8.1.0",
-    "moment": "^2.8.3",
+    "moment": "^2.24.0",
     "monk": "^3.1.3",
-    "morgan": "~1.3.0",
+    "morgan": "^1.9.1",
+    "pg": "^7.16.1",
     "sendgrid": "^1.2.0",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
-    "nodemon": "^1.2.1"
+    "nodemon": "^2.0.2"
   }
 }
