--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "start": "heroku local --procfile Procfile.dev",
-    "postinstall": "bower install",
     "www": "nodemon bin/www"
   },
   "engines": {
@@ -14,13 +13,13 @@
     "async": "^0.9.0",
     "basic-auth": "^1.0.0",
     "body-parser": "^1.19.0",
-    "bower": "^1.8.8",
     "connect-busboy": "0.0.1",
     "countdown": "^2.3.0",
     "express": "^4.17.1",
     "hjs": "0.0.6",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "pg": "^7.16.1",
     "sendgrid": "^1.2.0",
     "underscore": "^1.7.0"
