--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "pg": "^7.17.1",
-    "sendgrid": "^1.2.0",
     "underscore": "^1.9.2"
   },
   "devDependencies": {
